--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TOKEN=MTEzMzYzODI5NTMyNzM1MDg1NQ.GkmAbg.lTNslTOOqTV8DooH-bdYOcWf4FlV7drQjiQWeU
+TOKEN=MTEzMzYzODI5NTMyNzM1MDg1NQ.Gsniup.YYULVGDjQdnp8txxqMEGJw8r78qkgkHoM5tVkk
 DATA=1
 clientId=1133638295327350855
 guildId=1106845796172836966
