--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cron": "^2.4.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mongoose": "^7.4.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1"
   }
 }
