--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TOKEN=MTEzMzYzODI5NTMyNzM1MDg1NQ.GchR1f.HOpB6cJSlThiOPMF3KgeJ_ODxGiX_Vd33ewo_w
+TOKEN=MTEzMzYzODI5NTMyNzM1MDg1NQ.GmLEdj.oJ2GMY2nTfG3AmRNgsMZmXO1VxFqzJg3shyGlI
 DATA=1
 clientId=1133638295327350855
 guildId=1106845796172836966
